--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@strapi/plugin-cloud": "5.21.0",
     "@strapi/plugin-users-permissions": "5.21.0",
     "@strapi/provider-email-nodemailer": "^5.21.0",
+    "@strapi/provider-email-sendgrid": "^5.21.0",
     "@strapi/strapi": "5.21.0",
     "mysql2": "3.9.8",
     "react": "^18.0.0",
